Frames Not Updated in Separate Dopesheet Window #128966
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#128966
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 565.90
Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash:
a51f293548ad
Worked: (newest version of Blender that worked as expected)
Short description of error
When title bar is held stationary with LMB, render or playback does not update
Exact steps for others to reproduce the error
Hi, thanks for the report. This is true when window is held with left click, will update the report.
"Duplicate area into new window - Glitchto Scene does not update when title bar is held stationary with LMBThis could be due to how your windows desktop environment is set up. In Windows appearance settings you could try enable/disabling window animation and preview when scaling/moving the window. Windows and your driver may or may not want to refresh the content of the window when you are moving it depending on your configuration.
Every other window is working properly, this only happens when I use the option "Duplicate area into new window" or "Window/New Window" Specially if I set the new window to Dope Sheet or Graph editor.
I tried with different "windows appearance settings" and some "Nvidia graphic settings" but there is no difference
I tried on Blender 4.3 Beta, same problem.
I also tried it on a Macbook M1, found the same bug, and found that it only works properly if you have the mouse cursor on the header or the channel area of the new window before hitting "Play"
Not seeing that. If I just launch Blender with defaults, click "play", then hold my mouse down on the titlebar, without moving it, I see the animation stop. So this is with all windows.
But this also seems pretty normal. You are clicking OUTSIDE of our window and this title-dragging process is handled by the operating system. It is blocking our thread while it does so. As you move your mouse the OS will then send messages to us and let us process the movement, but this remains an OS-handled process until you lift up again.
Why are you wanting to press down with your mouse in the titlebar without moving it?
The problem is that the new window is not updating/drawing properly, here is a vídeo of it, and it happens on different machines PC and Mac
And here I’m trying to show how it works properly when i have the mouse cursor on top of the header or the channel area before hiting play
Sorry, so far I'm unable to recreate what you show in either video. No matter where my mouse is when I start/stop the animation the two windows stay in synch.
But I'm also not seeing how the videos relate to the original complain that "When title bar is held stationary with LMB, render or playback does not update" since you don't seem to do that in either video.
Oh, I can see the behavior shown in the videos. But the area has to be Dopesheet. Using Timeline - because the description says to "Open default scene" - I don't see that happen. But still not sure how any of it relates to "Hold window title bar with left click"
Okay, I propose making the following changes to this bug report:
Title: Frames Not Updated in Separate Dopesheet Window
Exact steps for others to reproduce the error:
Scene does not update when title bar is held stationary with LMBto Frames Not Updated in Separate Dopesheet Window